--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="location">Chicago</string>
     <string name="description">We are a family owned Mediterranean restaurant, focused on traditional recipes served with a modern twist.</string>
     <string name="orderbuttontext">Order Take Away</string>
-    <string name="order_for_takeaway">ORDER FOR TAKEAWAY</string>
+    <string name="order_for_takeaway">ORDER FOR DELIVERY!</string>
     <string name="registration_success">"Registration successful!"</string>
     <string name="registration_failed" >Registration unsuccessful. Please enter all data.</string>
 </resources>
